--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@headlessui/react": "^2.1.9",
+    "@mui/icons-material": "^6.1.2",
+    "@mui/material": "^6.1.2",
     "@panzoom/panzoom": "^4.5.1",
     "@types/uuid": "^10.0.0",
     "axios": "^1.7.2",
