--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@panzoom/panzoom": "^4.5.1",
     "@types/uuid": "^10.0.0",
     "axios": "^1.7.2",
+    "lucide-react": "^0.447.0",
     "middleware": "^1.0.0",
     "next": "14.2.4",
     "notistack": "^3.0.1",
