--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@panzoom/panzoom": "^4.5.1",
     "@types/uuid": "^10.0.0",
     "axios": "^1.7.2",
-    "middleware": "^1.0.0",
     "lucide-react": "^0.447.0",
+    "middleware": "^1.0.0",
     "next": "14.2.4",
     "notistack": "^3.0.1",
     "react": "^18",
@@ -27,6 +27,7 @@
     "react-icons": "^5.2.1",
     "react-tooltip": "^5.28.0",
     "react-zoom-pan-pinch": "^3.6.1",
+    "tar": "^7.4.3",
     "uuid": "^10.0.0",
     "zustand": "^4.5.4"
   },
