--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-tooltip": "^5.28.0",
     "react-zoom-pan-pinch": "^3.6.1",
     "tar": "^7.4.3",
+    "tar-stream": "^3.1.7",
     "uuid": "^10.0.0",
     "zustand": "^4.5.4"
   },
@@ -35,6 +36,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/tar-stream": "^3.1.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
