--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18",
     "react-draggable": "^4.4.6",
     "react-icons": "^5.2.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-tooltip": "^5.28.0",
     "react-zoom-pan-pinch": "^3.6.1",
     "tar": "^7.4.3",
