--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@panzoom/panzoom": "^4.5.1",
     "@types/uuid": "^10.0.0",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.4",
     "lucide-react": "^0.447.0",
     "middleware": "^1.0.0",
     "next": "14.2.4",
     "notistack": "^3.0.1",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
