--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "react-draggable": "^4.4.6",
     "react-icons": "^5.2.1",
     "react-responsive-carousel": "^3.2.23",
+    "react-slick": "^0.30.2",
     "react-tooltip": "^5.28.0",
     "react-zoom-pan-pinch": "^3.6.1",
+    "slick-carousel": "^1.8.1",
     "tar": "^7.4.3",
     "tar-stream": "^3.1.7",
     "uuid": "^10.0.0",
@@ -41,6 +43,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "@types/tar-stream": "^3.1.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
