--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/uuid": "^10.0.0",
     "axios": "^1.7.2",
     "chart.js": "^4.4.4",
+    "html-to-jsx-transform": "^1.2.0",
     "lucide-react": "^0.447.0",
     "middleware": "^1.0.0",
     "next": "14.2.4",
